--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html495"
   HREF="node90.html">Introducción a Los Object Relational Mappers (ORM)</A>
 <LI><A NAME="tex2html496"
-  HREF="node91.html">Introducción al Patrón DataMapper</A>
+  HREF="node91.html">Patterns Active Record y  DataMapper</A>
 <LI><A NAME="tex2html497"
   HREF="node92.html">Ejemplo de Uso de DataMapper</A>
 <LI><A NAME="tex2html498"
