--- a/node79.html
+++ b/node79.html
@@ -147,7 +147,7 @@ HERRAMIENTAS</A>
 <LI><A NAME="tex2html2264"
   HREF="node90.html">Introducción a Los Object Relational Mappers (ORM)</A>
 <LI><A NAME="tex2html2265"
-  HREF="node91.html">Introducción al Patrón DataMapper</A>
+  HREF="node91.html">Patterns Active Record y  DataMapper</A>
 <LI><A NAME="tex2html2266"
   HREF="node92.html">Ejemplo de Uso de DataMapper</A>
 <LI><A NAME="tex2html2267"
