--- a/node1.html
+++ b/node1.html
@@ -430,7 +430,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html662"
   HREF="node90.html">Introducción a Los Object Relational Mappers (ORM)</A>
 <LI><A NAME="tex2html663"
-  HREF="node91.html">Introducción al Patrón DataMapper</A>
+  HREF="node91.html">Patterns Active Record y DataMapper</A>
 <LI><A NAME="tex2html664"
   HREF="node92.html">Ejemplo de Uso de DataMapper</A>
 <LI><A NAME="tex2html665"
