--- a/node91.html
+++ b/node91.html
@@ -158,42 +158,53 @@ the underlying database table.
 Active record is an approach to accessing data in a database. 
 
 <P>
-A database
+
+<UL>
+<LI>A database
 table or view is wrapped into a class. 
 
 <P>
-Thus, an object instance is tied
+</LI>
+<LI>Thus, an object instance is tied
 to a single row in the table. 
 
 <P>
-After creation of an object, a new row is
+</LI>
+<LI>After creation of an object, a new row is
 added to the table upon save. 
 
 <P>
-Any object loaded gets its information
+</LI>
+<LI>Any object loaded gets its information
 from the database. 
 
 <P>
-When an object is updated the corresponding row in
+</LI>
+<LI>When an object is updated the corresponding row in
 the table is also updated. 
 
 <P>
-The wrapper class implements accessor methods
+</LI>
+<LI>The wrapper class implements accessor methods
 or properties for each column in the table or view.
 
 <P>
-This pattern is commonly used by object persistence tools, and in
+</LI>
+<LI>This pattern is commonly used by object persistence tools, and in
 object-relational mapping (ORM). 
 
 <P>
-Typically, foreign key relationships will
+</LI>
+<LI>Typically, foreign key relationships will
 be exposed as an object instance of the appropriate type via a property.
+</LI>
+</UL>
 
 <P>
 <A NAME="tex2html317"
   HREF="https://rubygems.org/gems/activerecord">activerecord</A>
 y <A NAME="tex2html318"
-  HREF="http://datamapper.org/docs/"><TT>DataMapper</TT></A> siguen el patrón <A NAME="9353"></A><SPAN  CLASS="textbf">Active Record</SPAN>.
+  HREF="http://datamapper.org/docs/"><TT>DataMapper</TT></A> siguen el patrón <A NAME="9355"></A><SPAN  CLASS="textbf">Active Record</SPAN>.
 
 <P>
 
@@ -230,7 +241,7 @@ transfer becomes a complexity in its own right.
 know about the relational database structure, changes in
 one tend to ripple to the other.
 </LI>
-<LI>The <A NAME="9359"></A><SPAN  CLASS="textbf">Data Mapper</SPAN> is a layer of software that separates the in-memory
+<LI>The <A NAME="9361"></A><SPAN  CLASS="textbf">Data Mapper</SPAN> is a layer of software that separates the in-memory
 objects from the database. 
 </LI>
 <LI><SPAN  CLASS="textbf">Its responsibility is to transfer data between
