--- a/node91.html
+++ b/node91.html
@@ -201,7 +201,7 @@ be exposed as an object instance of the appropriate type via a property.
 </UL>
 
 <P>
-<A NAME="tex2html317"
+Las gemas <A NAME="tex2html317"
   HREF="https://rubygems.org/gems/activerecord">activerecord</A>
 y <A NAME="tex2html318"
   HREF="http://datamapper.org/docs/"><TT>DataMapper</TT></A> siguen el patrón <A NAME="9359"></A><SPAN  CLASS="textbf">Active Record</SPAN>.
