--- a/node91.html
+++ b/node91.html
@@ -276,7 +276,7 @@ ignorant of the objects that use it.)
 </OL>
 
 <P>
-<A NAME="tex2html324"
+The gem <A NAME="tex2html324"
   HREF="https://github.com/jgaskins/perpetuity">perpetuity</A>
 implements the DataMapper pattern.
 
