--- a/node91.html
+++ b/node91.html
@@ -245,7 +245,7 @@ aren't present in relational databases.
 </LI>
 <LI>When you build an
 object model with a lot of business logic it's valuable to use these
-mechanisms (creo que se refiere a la herencia, etc.) 
+mechanisms  
 to better organize the data and the behavior that goes with
 it. 
 </LI>
