--- a/node1.html
+++ b/node1.html
@@ -419,7 +419,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html663"
   HREF="node84.html#SECTION06141000000000000000">Crashing</A>
 <LI><A NAME="tex2html664"
-  HREF="node84.html#SECTION06142000000000000000">Timeout awaiting process</A>
+  HREF="node84.html#SECTION06142000000000000000">heroku run: Timeout awaiting process</A>
 </UL>
 <LI><A NAME="tex2html665"
   HREF="node85.html">Configuration</A>
