--- a/node105.html
+++ b/node105.html
@@ -412,7 +412,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html2927"
   HREF="node84.html#SECTION06141000000000000000">Crashing</A>
 <LI><A NAME="tex2html2928"
-  HREF="node84.html#SECTION06142000000000000000">Timeout awaiting process</A>
+  HREF="node84.html#SECTION06142000000000000000">heroku run: Timeout awaiting process</A>
 </UL>
 <LI><A NAME="tex2html2929"
   HREF="node85.html">Configuration</A>
