--- a/node84.html
+++ b/node84.html
@@ -131,7 +131,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 </UL>
 <BR>
 <LI><A NAME="tex2html2445"
-  HREF="node84.html#SECTION06142000000000000000">Timeout awaiting process</A>
+  HREF="node84.html#SECTION06142000000000000000"><FONT COLOR="#ff0000"> heroku run</FONT>: Timeout awaiting process</A>
 </UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -317,11 +317,13 @@ send a body with Content-Length of 0.
 <P>
 
 <H2><A NAME="SECTION06142000000000000000">
-Timeout awaiting process</A>
+
+<FONT COLOR="#ff0000"> heroku run</FONT>: Timeout awaiting process</A>
 </H2>
 
 <P>
-The heroku run command opens a connection to Heroku on port 5000. If
+The 
+<FONT COLOR="#ff0000"> heroku run</FONT> command opens a connection to Heroku on port 5000. If
 your local network or ISP is blocking port 5000, or you are experiencing
 a connectivity issue, you will see an error similar to:
 
