--- a/javascriptexamples.html
+++ b/javascriptexamples.html
@@ -427,7 +427,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html494"
   HREF="node84.html#SECTION06141000000000000000">Crashing</A>
 <LI><A NAME="tex2html495"
-  HREF="node84.html#SECTION06142000000000000000">Timeout awaiting process</A>
+  HREF="node84.html#SECTION06142000000000000000"><FONT COLOR="#ff0000"> heroku run</FONT>: Timeout awaiting process</A>
 </UL>
 <LI><A NAME="tex2html496"
   HREF="node85.html">Configuration</A>
