--- a/node79.html
+++ b/node79.html
@@ -135,7 +135,7 @@ HERRAMIENTAS</A>
 <LI><A NAME="tex2html2267"
   HREF="node84.html#SECTION06141000000000000000">Crashing</A>
 <LI><A NAME="tex2html2268"
-  HREF="node84.html#SECTION06142000000000000000">Timeout awaiting process</A>
+  HREF="node84.html#SECTION06142000000000000000"><FONT COLOR="#ff0000"> heroku run</FONT>: Timeout awaiting process</A>
 </UL>
 <LI><A NAME="tex2html2269"
   HREF="node85.html">Configuration</A>
