--- a/node80.html
+++ b/node80.html
@@ -223,7 +223,7 @@ Heroku
   HREF="node84.html#SECTION06141060000000000000">Rack::Sendfile</A>
 </UL>
 <LI><A NAME="tex2html2344"
-  HREF="node84.html#SECTION06142000000000000000">Timeout awaiting process</A>
+  HREF="node84.html#SECTION06142000000000000000"><FONT COLOR="#ff0000"> heroku run</FONT>: Timeout awaiting process</A>
 </UL>
 <BR>
 <LI><A NAME="tex2html2345"
