--- a/node84.html
+++ b/node84.html
@@ -323,8 +323,9 @@ send a body with Content-Length of 0.
 
 <P>
 The 
-<FONT COLOR="#ff0000"> heroku run</FONT> command opens a connection to Heroku on port 5000. If
-your local network or ISP is blocking port 5000, or you are experiencing
+<FONT COLOR="#ff0000"> heroku run command opens a connection to Heroku on port 5000</FONT>. If
+your local network or ISP is blocking port 5000 (el caso de la ULL), 
+or you are experiencing
 a connectivity issue, you will see an error similar to:
 
 <P>
