--- a/node37.html
+++ b/node37.html
@@ -168,6 +168,24 @@ if a then (if b then s else s2)
 </PRE>
 
 <P>
+This is a problem that often comes up in compiler construction,
+especially scannerless parsing. 
+
+<P>
+The convention when dealing with
+the dangling <code>else</code> is to attach the <code>else</code> to the nearby
+<code>if</code> statement.
+
+<P>
+Programming languages like Pascal and C follow this
+convention, so there is no ambiguity in the semantics of the language,
+though the use of a parser generator may lead to ambiguous grammars. 
+In
+these cases 
+<FONT COLOR="#ff0000"> alternative grouping is accomplished by explicit blocks</FONT>,
+such as <code>begin...end</code> in Pascal and <code>{...}</code> in C.
+
+<P>
 <PRE>
 $ cat danglingelse.pegjs 
 /*
