--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   HREF="node36.html#SECTION04483000000000000000">Eliminación de la Recursividad por la Izquierda en PEGJS</A>
 </UL>
 <LI><A NAME="tex2html418"
-  HREF="node37.html">Asociando un else con su if mas cercano</A>
+  HREF="node37.html"><FONT COLOR="#ff0000"> Dangling else</FONT>: Asociando un else con su if mas cercano</A>
 <LI><A NAME="tex2html419"
   HREF="node38.html">Comentarios Anidados</A>
 <LI><A NAME="tex2html420"
