--- a/node105.html
+++ b/node105.html
@@ -225,7 +225,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   HREF="node36.html#SECTION04483000000000000000">Eliminación de la Recursividad por la Izquierda en PEGJS</A>
 </UL>
 <LI><A NAME="tex2html2851"
-  HREF="node37.html">Asociando un else con su if mas cercano</A>
+  HREF="node37.html">Dangling else: Asociando un else con su if mas cercano</A>
 <LI><A NAME="tex2html2852"
   HREF="node38.html">Comentarios Anidados</A>
 <LI><A NAME="tex2html2853"
