--- a/node37.html
+++ b/node37.html
@@ -7,8 +7,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>Asociando un else con su if mas cercano</TITLE>
-<META NAME="description" CONTENT="Asociando un else con su if mas cercano">
+<TITLE>Dangling else: Asociando un else con su if mas cercano</TITLE>
+<META NAME="description" CONTENT="Dangling else: Asociando un else con su if mas cercano">
 <META NAME="keywords" CONTENT="javascriptexamples">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -111,7 +111,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION04490000000000000000">
-Asociando un else con su if mas cercano</A>
+
+<FONT COLOR="#ff0000"> Dangling else</FONT>: Asociando un else con su if mas cercano</A>
 </H1>
 
 <P>
@@ -184,6 +185,9 @@ In
 these cases 
 <FONT COLOR="#ff0000"> alternative grouping is accomplished by explicit blocks</FONT>,
 such as <code>begin...end</code> in Pascal and <code>{...}</code> in C.
+
+<P>
+Here follows a solution in PEG.js:
 
 <P>
 <PRE>
