--- a/node38.html
+++ b/node38.html
@@ -97,7 +97,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B>Sup:</B> <A NAME="tex2html1525"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
 <B> Ant:</B> <A NAME="tex2html1519"
-  HREF="node37.html">Asociando un else con</A>
+  HREF="node37.html">Dangling else: Asociando un</A>
 <B> Con:</B> 
 <A NAME="tex2html1526"
   HREF="node105.html">
@@ -223,7 +223,7 @@ $ node use_pascal_comments.js
 <B>Sup:</B> <A NAME="tex2html1525"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
 <B> Ant:</B> <A NAME="tex2html1519"
-  HREF="node37.html">Asociando un else con</A>
+  HREF="node37.html">Dangling else: Asociando un</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
