--- a/node6.html
+++ b/node6.html
@@ -231,7 +231,7 @@ PRIMERA PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
   HREF="node36.html#SECTION04483000000000000000">Eliminación de la Recursividad por la Izquierda en PEGJS</A>
 </UL>
 <LI><A NAME="tex2html808"
-  HREF="node37.html">Asociando un else con su if mas cercano</A>
+  HREF="node37.html"><FONT COLOR="#ff0000"> Dangling else</FONT>: Asociando un else con su if mas cercano</A>
 <LI><A NAME="tex2html809"
   HREF="node38.html">Comentarios Anidados</A>
 <LI><A NAME="tex2html810"
