--- a/node36.html
+++ b/node36.html
@@ -93,7 +93,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1500"
-  HREF="node37.html">Asociando un else con</A>
+  HREF="node37.html">Dangling else: Asociando un</A>
 <B>Sup:</B> <A NAME="tex2html1494"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
 <B> Ant:</B> <A NAME="tex2html1488"
@@ -218,7 +218,7 @@ eliminando así la recursión por la izquierda.
 <SPAN CLASS="MATH"><IMG
  WIDTH="70" HEIGHT="16" ALIGN="BOTTOM" BORDER="0"
  SRC="img92.png"
- ALT="$ R \rightarrow \alpha R$"></SPAN> se dice <A NAME="4808"></A><SPAN  CLASS="textbf">recursiva por la derecha</SPAN>.</I></DIV><P></P>
+ ALT="$ R \rightarrow \alpha R$"></SPAN> se dice <A NAME="4809"></A><SPAN  CLASS="textbf">recursiva por la derecha</SPAN>.</I></DIV><P></P>
 
 <P>
 Las producciones recursivas por la derecha dan lugar a árboles
@@ -593,7 +593,7 @@ Referenced rule "$" does not exist.
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1500"
-  HREF="node37.html">Asociando un else con</A>
+  HREF="node37.html">Dangling else: Asociando un</A>
 <B>Sup:</B> <A NAME="tex2html1494"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
 <B> Ant:</B> <A NAME="tex2html1488"
