--- a/node28.html
+++ b/node28.html
@@ -226,38 +226,47 @@ Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 <BR>
 <LI><A NAME="tex2html1342"
   HREF="node37.html"><FONT COLOR="#ff0000"> Dangling else</FONT>: Asociando un else con su if mas cercano</A>
+<UL>
 <LI><A NAME="tex2html1343"
-  HREF="node38.html">Comentarios Anidados</A>
+  HREF="node37.html#SECTION04490010000000000000">danglingelse.pegjs</A>
 <LI><A NAME="tex2html1344"
-  HREF="node39.html">Un Lenguaje Dependiente del Contexto</A>
+  HREF="node37.html#SECTION04490020000000000000">use_danglingelse.js</A>
 <LI><A NAME="tex2html1345"
+  HREF="node37.html#SECTION04490030000000000000">Ejecución</A>
+</UL>
+<BR>
+<LI><A NAME="tex2html1346"
+  HREF="node38.html">Comentarios Anidados</A>
+<LI><A NAME="tex2html1347"
+  HREF="node39.html">Un Lenguaje Dependiente del Contexto</A>
+<LI><A NAME="tex2html1348"
   HREF="node40.html">Usando Pegjs con CoffeeScript</A>
 <UL>
-<LI><A NAME="tex2html1346"
+<LI><A NAME="tex2html1349"
   HREF="node40.html#SECTION044120010000000000000">Instalación de pegjs-coffee-plugin</A>
-<LI><A NAME="tex2html1347"
+<LI><A NAME="tex2html1350"
   HREF="node40.html#SECTION044120020000000000000">Ejemplo Sencillo</A>
-<LI><A NAME="tex2html1348"
+<LI><A NAME="tex2html1351"
   HREF="node40.html#SECTION044120030000000000000">Véase También</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1349"
+<LI><A NAME="tex2html1352"
   HREF="node41.html">Práctica: Analizador de PL0 Ampliado Usando PEG.js</A>
 <UL>
-<LI><A NAME="tex2html1350"
+<LI><A NAME="tex2html1353"
   HREF="node41.html#SECTION044130010000000000000">Donde</A>
-<LI><A NAME="tex2html1351"
+<LI><A NAME="tex2html1354"
   HREF="node41.html#SECTION044130020000000000000">Tareas</A>
-<LI><A NAME="tex2html1352"
+<LI><A NAME="tex2html1355"
   HREF="node41.html#SECTION044130030000000000000">Referencias para esta Práctica</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html1353"
+<LI><A NAME="tex2html1356"
   HREF="node42.html">Práctica: Ambiguedad en C++</A>
-<LI><A NAME="tex2html1354"
+<LI><A NAME="tex2html1357"
   HREF="node43.html">Práctica: Inventando un Lenguaje: Tortoise</A>
 <UL>
-<LI><A NAME="tex2html1355"
+<LI><A NAME="tex2html1358"
   HREF="node43.html#SECTION044150010000000000000">Recursos</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
