--- a/node37.html
+++ b/node37.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1516"
+<A NAME="tex2html1519"
   HREF="node38.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1510"
+<A NAME="tex2html1513"
   HREF="node28.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1504"
+<A NAME="tex2html1507"
   HREF="node36.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1512"
+<A NAME="tex2html1515"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1514"
+<A NAME="tex2html1517"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,23 +92,38 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1517"
+<B> Sig:</B> <A NAME="tex2html1520"
   HREF="node38.html">Comentarios Anidados</A>
-<B>Sup:</B> <A NAME="tex2html1511"
+<B>Sup:</B> <A NAME="tex2html1514"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1505"
+<B> Ant:</B> <A NAME="tex2html1508"
   HREF="node36.html">Eliminación de la Recursividad</A>
 <B> Con:</B> 
-<A NAME="tex2html1512"
+<A NAME="tex2html1515"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1514"
+<A NAME="tex2html1517"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
 </DIV>
 <!--End of Navigation Panel-->
+<!--Table of Child-Links-->
+<A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
+
+<UL CLASS="ChildLinks">
+<LI><UL>
+<LI><UL>
+<LI><A NAME="tex2html1521"
+  HREF="node37.html#SECTION04490010000000000000">danglingelse.pegjs</A>
+<LI><A NAME="tex2html1522"
+  HREF="node37.html#SECTION04490020000000000000">use_danglingelse.js</A>
+<LI><A NAME="tex2html1523"
+  HREF="node37.html#SECTION04490030000000000000">Ejecución</A>
+</UL></UL></UL>
+<!--End of Table of Child-Links-->
+<HR>
 
 <H1><A NAME="SECTION04490000000000000000">
 
@@ -190,6 +205,12 @@ such as <code>begin...end</code> in Pascal and <code>{...}</code> in C.
 Here follows a solution in PEG.js:
 
 <P>
+
+<H4><A NAME="SECTION04490010000000000000">
+danglingelse.pegjs</A>
+</H4>
+  
+
 <PRE>
 $ cat danglingelse.pegjs 
 /*
@@ -208,6 +229,13 @@ then = _'then'_
 </PRE>
 
 <P>
+
+<H4><A NAME="SECTION04490020000000000000">
+use_danglingelse.js</A>
+</H4>
+  
+
+<P>
 <PRE>
 $ cat use_danglingelse.js 
 var PEG = require("./danglingelse.js");
@@ -216,6 +244,12 @@ console.log(r);
 </PRE>
 
 <P>
+
+<H4><A NAME="SECTION04490030000000000000">
+Ejecución</A>
+</H4>
+  
+
 <PRE>
 $ ../bin/pegjs danglingelse.pegjs 
 $ node use_danglingelse.js 
@@ -225,19 +259,19 @@ $ node use_danglingelse.js
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1516"
+<A NAME="tex2html1519"
   HREF="node38.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1510"
+<A NAME="tex2html1513"
   HREF="node28.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1504"
+<A NAME="tex2html1507"
   HREF="node36.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1512"
+<A NAME="tex2html1515"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1514"
+<A NAME="tex2html1517"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -289,11 +323,11 @@ $ node use_danglingelse.js
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1517"
+<B> Sig:</B> <A NAME="tex2html1520"
   HREF="node38.html">Comentarios Anidados</A>
-<B>Sup:</B> <A NAME="tex2html1511"
+<B>Sup:</B> <A NAME="tex2html1514"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1505"
+<B> Ant:</B> <A NAME="tex2html1508"
   HREF="node36.html">Eliminación de la Recursividad</A>
 </DIV>
 <!--End of Navigation Panel-->
