--- a/node41.html
+++ b/node41.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1581"
+<A NAME="tex2html1583"
   HREF="node42.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1575"
+<A NAME="tex2html1577"
   HREF="node28.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1569"
+<A NAME="tex2html1571"
   HREF="node40.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1577"
+<A NAME="tex2html1579"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1579"
+<A NAME="tex2html1581"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1582"
+<B> Sig:</B> <A NAME="tex2html1584"
   HREF="node42.html">Práctica: Ambiguedad en C++</A>
-<B>Sup:</B> <A NAME="tex2html1576"
+<B>Sup:</B> <A NAME="tex2html1578"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1570"
+<B> Ant:</B> <A NAME="tex2html1572"
   HREF="node40.html">Usando Pegjs con CoffeeScript</A>
 <B> Con:</B> 
-<A NAME="tex2html1577"
+<A NAME="tex2html1579"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1579"
+<A NAME="tex2html1581"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,18 +115,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1583"
-  HREF="node41.html#SECTION044130010000000000000">Donde</A>
-<LI><A NAME="tex2html1584"
-  HREF="node41.html#SECTION044130020000000000000">Tareas</A>
 <LI><A NAME="tex2html1585"
+  HREF="node41.html#SECTION044130010000000000000">Donde</A>
+<LI><A NAME="tex2html1586"
+  HREF="node41.html#SECTION044130020000000000000">Tareas</A>
+<LI><A NAME="tex2html1587"
   HREF="node41.html#SECTION044130030000000000000">Referencias para esta Práctica</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION044130000000000000000"></A>
-   <A NAME="4843"></A>
+   <A NAME="4848"></A>
   
 <A NAME="practica:pl0ampliado"></A>
 <BR>
@@ -181,6 +181,7 @@ Tareas</A>
 <LI>Modifique <code>block</code> y <code>statement</code> para que los 
 <code>procedure</code> reciban argumentos y las llamadas 
 a procedimiento puedan pasar argumentos.
+Añada <code>if ... then ... else ...</code>.
 </LI>
 <LI>Actualice la documentación de la gramática para que refleje la gramática ampliada
 </LI>
@@ -211,19 +212,19 @@ Referencias para esta Práctica</A>
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1581"
+<A NAME="tex2html1583"
   HREF="node42.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1575"
+<A NAME="tex2html1577"
   HREF="node28.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1569"
+<A NAME="tex2html1571"
   HREF="node40.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1577"
+<A NAME="tex2html1579"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1579"
+<A NAME="tex2html1581"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -275,11 +276,11 @@ Referencias para esta Práctica</A>
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1582"
+<B> Sig:</B> <A NAME="tex2html1584"
   HREF="node42.html">Práctica: Ambiguedad en C++</A>
-<B>Sup:</B> <A NAME="tex2html1576"
+<B>Sup:</B> <A NAME="tex2html1578"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1570"
+<B> Ant:</B> <A NAME="tex2html1572"
   HREF="node40.html">Usando Pegjs con CoffeeScript</A>
 </DIV>
 <!--End of Navigation Panel-->
