--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html421"
   HREF="node37.html"><FONT COLOR="#ff0000"> Dangling else</FONT>: Asociando un else con su if mas cercano</A>
 <LI><A NAME="tex2html422"
-  HREF="node38.html">Comentarios Anidados</A>
+  HREF="node38.html">Not Predicate: Comentarios Anidados</A>
 <LI><A NAME="tex2html423"
   HREF="node39.html">Un Lenguaje Dependiente del Contexto</A>
 <LI><A NAME="tex2html424"
