--- a/node1.html
+++ b/node1.html
@@ -234,7 +234,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html590"
   HREF="node37.html">Dangling else: Asociando un else con su if mas cercano</A>
 <LI><A NAME="tex2html591"
-  HREF="node38.html">Comentarios Anidados</A>
+  HREF="node38.html">Not Predicate: Comentarios Anidados</A>
 <LI><A NAME="tex2html592"
   HREF="node39.html">Un Lenguaje Dependiente del Contexto</A>
 <LI><A NAME="tex2html593"
