--- a/node28.html
+++ b/node28.html
@@ -238,7 +238,7 @@ Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 </UL>
 <BR>
 <LI><A NAME="tex2html1350"
-  HREF="node38.html">Comentarios Anidados</A>
+  HREF="node38.html">Not Predicate: Comentarios Anidados</A>
 <UL>
 <LI><A NAME="tex2html1351"
   HREF="node38.html#SECTION044100010000000000000">Pascal_comments.pegjs</A>
