--- a/node37.html
+++ b/node37.html
@@ -93,7 +93,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1528"
-  HREF="node38.html">Comentarios Anidados</A>
+  HREF="node38.html">Not Predicate: Comentarios Anidados</A>
 <B>Sup:</B> <A NAME="tex2html1522"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
 <B> Ant:</B> <A NAME="tex2html1516"
@@ -356,7 +356,7 @@ origin  git@github.com:crguezl/pegjs.git (push)
  ALT="crguezl at github"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1528"
-  HREF="node38.html">Comentarios Anidados</A>
+  HREF="node38.html">Not Predicate: Comentarios Anidados</A>
 <B>Sup:</B> <A NAME="tex2html1522"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
 <B> Ant:</B> <A NAME="tex2html1516"
