--- a/node39.html
+++ b/node39.html
@@ -97,7 +97,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B>Sup:</B> <A NAME="tex2html1558"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
 <B> Ant:</B> <A NAME="tex2html1552"
-  HREF="node38.html">Comentarios Anidados</A>
+  HREF="node38.html">Not Predicate: Comentarios Anidados</A>
 <B> Con:</B> 
 <A NAME="tex2html1559"
   HREF="node105.html">
@@ -251,7 +251,7 @@ Grr....SyntaxError: Expected "c" but end of input found.
 <B>Sup:</B> <A NAME="tex2html1558"
   HREF="node28.html">Análisis Descendente mediante Parsing</A>
 <B> Ant:</B> <A NAME="tex2html1552"
-  HREF="node38.html">Comentarios Anidados</A>
+  HREF="node38.html">Not Predicate: Comentarios Anidados</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
