--- a/node6.html
+++ b/node6.html
@@ -233,7 +233,7 @@ PRIMERA PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
 <LI><A NAME="tex2html811"
   HREF="node37.html"><FONT COLOR="#ff0000"> Dangling else</FONT>: Asociando un else con su if mas cercano</A>
 <LI><A NAME="tex2html812"
-  HREF="node38.html">Comentarios Anidados</A>
+  HREF="node38.html">Not Predicate: Comentarios Anidados</A>
 <LI><A NAME="tex2html813"
   HREF="node39.html">Un Lenguaje Dependiente del Contexto</A>
 <LI><A NAME="tex2html814"
