--- a/node80.html
+++ b/node80.html
@@ -154,7 +154,7 @@ Heroku
 <LI><A NAME="tex2html2333"
   HREF="node81.html#SECTION061100140000000000000">View the logs</A>
 <LI><A NAME="tex2html2334"
-  HREF="node81.html#SECTION061100150000000000000">Console</A>
+  HREF="node81.html#SECTION061100150000000000000"><FONT COLOR="#ff0000"> heroku run</FONT></A>
 <LI><A NAME="tex2html2335"
   HREF="node81.html#SECTION061100160000000000000">Rake</A>
 <LI><A NAME="tex2html2336"
@@ -188,51 +188,53 @@ Heroku
 <LI><A NAME="tex2html2347"
   HREF="node83.html#SECTION06130010000000000000">Provisioning the add-on</A>
 <LI><A NAME="tex2html2348"
-  HREF="node83.html#SECTION06130020000000000000">Create new db</A>
+  HREF="node83.html#SECTION06130020000000000000"><FONT COLOR="#ff0000"> heroku run</FONT></A>
 <LI><A NAME="tex2html2349"
-  HREF="node83.html#SECTION06130030000000000000">Establish primary DB</A>
+  HREF="node83.html#SECTION06130030000000000000">Create new db</A>
 <LI><A NAME="tex2html2350"
-  HREF="node83.html#SECTION06130040000000000000">pg:info</A>
+  HREF="node83.html#SECTION06130040000000000000">Establish primary DB</A>
 <LI><A NAME="tex2html2351"
-  HREF="node83.html#SECTION06130050000000000000">pg:psql</A>
+  HREF="node83.html#SECTION06130050000000000000">pg:info</A>
 <LI><A NAME="tex2html2352"
-  HREF="node83.html#SECTION06130060000000000000">pg:reset</A>
+  HREF="node83.html#SECTION06130060000000000000">pg:psql</A>
 <LI><A NAME="tex2html2353"
-  HREF="node83.html#SECTION06130070000000000000">pg:pull</A>
+  HREF="node83.html#SECTION06130070000000000000">pg:reset</A>
 <LI><A NAME="tex2html2354"
-  HREF="node83.html#SECTION06130080000000000000">pg:push</A>
+  HREF="node83.html#SECTION06130080000000000000">pg:pull</A>
+<LI><A NAME="tex2html2355"
+  HREF="node83.html#SECTION06130090000000000000">pg:push</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html2355"
+<LI><A NAME="tex2html2356"
   HREF="node84.html">Troubleshooting</A>
 <UL>
-<LI><A NAME="tex2html2356"
+<LI><A NAME="tex2html2357"
   HREF="node84.html#SECTION06141000000000000000">Crashing</A>
 <UL>
-<LI><A NAME="tex2html2357"
-  HREF="node84.html#SECTION06141010000000000000">Failed to require a sourcefile</A>
 <LI><A NAME="tex2html2358"
-  HREF="node84.html#SECTION06141020000000000000">Encoding error</A>
+  HREF="node84.html#SECTION06141010000000000000">Failed to require a sourcefile</A>
 <LI><A NAME="tex2html2359"
-  HREF="node84.html#SECTION06141030000000000000">Missing a gem</A>
+  HREF="node84.html#SECTION06141020000000000000">Encoding error</A>
 <LI><A NAME="tex2html2360"
-  HREF="node84.html#SECTION06141040000000000000">Runtime dependencies on development/test gems</A>
+  HREF="node84.html#SECTION06141030000000000000">Missing a gem</A>
 <LI><A NAME="tex2html2361"
-  HREF="node84.html#SECTION06141050000000000000">Versiones soportadas por Heroku</A>
+  HREF="node84.html#SECTION06141040000000000000">Runtime dependencies on development/test gems</A>
 <LI><A NAME="tex2html2362"
+  HREF="node84.html#SECTION06141050000000000000">Versiones soportadas por Heroku</A>
+<LI><A NAME="tex2html2363"
   HREF="node84.html#SECTION06141060000000000000">Rack::Sendfile</A>
 </UL>
-<LI><A NAME="tex2html2363"
+<LI><A NAME="tex2html2364"
   HREF="node84.html#SECTION06142000000000000000"><FONT COLOR="#ff0000"> heroku run</FONT>: Timeout awaiting process</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html2364"
-  HREF="node85.html">Configuration</A>
 <LI><A NAME="tex2html2365"
-  HREF="node86.html">Make Heroku run non-master Git branch</A>
+  HREF="node85.html">Configuration</A>
 <LI><A NAME="tex2html2366"
-  HREF="node87.html">Account Verification and add-ons</A>
+  HREF="node86.html">Make Heroku run non-master Git branch</A>
 <LI><A NAME="tex2html2367"
+  HREF="node87.html">Account Verification and add-ons</A>
+<LI><A NAME="tex2html2368"
   HREF="node88.html">Véase</A>
 </UL>
 <!--End of Table of Child-Links-->
