--- a/node81.html
+++ b/node81.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2380"
+<A NAME="tex2html2381"
   HREF="node82.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2374"
+<A NAME="tex2html2375"
   HREF="node80.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2368"
+<A NAME="tex2html2369"
   HREF="node80.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2376"
+<A NAME="tex2html2377"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2378"
+<A NAME="tex2html2379"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2381"
+<B> Sig:</B> <A NAME="tex2html2382"
   HREF="node82.html">Logging</A>
-<B>Sup:</B> <A NAME="tex2html2375"
+<B>Sup:</B> <A NAME="tex2html2376"
   HREF="node80.html">Heroku</A>
-<B> Ant:</B> <A NAME="tex2html2369"
+<B> Ant:</B> <A NAME="tex2html2370"
   HREF="node80.html">Heroku</A>
 <B> Con:</B> 
-<A NAME="tex2html2376"
+<A NAME="tex2html2377"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html2378"
+<A NAME="tex2html2379"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,41 +115,41 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html2382"
-  HREF="node81.html#SECTION06110010000000000000">Prerequisitos</A>
 <LI><A NAME="tex2html2383"
-  HREF="node81.html#SECTION06110020000000000000">Instala el Heroku Toolbelt</A>
+  HREF="node81.html#SECTION06110010000000000000">Prerequisitos</A>
 <LI><A NAME="tex2html2384"
-  HREF="node81.html#SECTION06110030000000000000">Actualizaciones</A>
+  HREF="node81.html#SECTION06110020000000000000">Instala el Heroku Toolbelt</A>
 <LI><A NAME="tex2html2385"
-  HREF="node81.html#SECTION06110040000000000000">Ayuda</A>
+  HREF="node81.html#SECTION06110030000000000000">Actualizaciones</A>
 <LI><A NAME="tex2html2386"
-  HREF="node81.html#SECTION06110050000000000000">Specify Ruby Version and Declare dependencies with a Gemfile</A>
+  HREF="node81.html#SECTION06110040000000000000">Ayuda</A>
 <LI><A NAME="tex2html2387"
-  HREF="node81.html#SECTION06110060000000000000">Declare process types with <TT>Procfile</TT></A>
+  HREF="node81.html#SECTION06110050000000000000">Specify Ruby Version and Declare dependencies with a Gemfile</A>
 <LI><A NAME="tex2html2388"
-  HREF="node81.html#SECTION06110070000000000000">Foreman</A>
+  HREF="node81.html#SECTION06110060000000000000">Declare process types with <TT>Procfile</TT></A>
 <LI><A NAME="tex2html2389"
-  HREF="node81.html#SECTION06110080000000000000">Setting local environment variables</A>
+  HREF="node81.html#SECTION06110070000000000000">Foreman</A>
 <LI><A NAME="tex2html2390"
-  HREF="node81.html#SECTION06110090000000000000">Procfile y Despliegue</A>
+  HREF="node81.html#SECTION06110080000000000000">Setting local environment variables</A>
 <LI><A NAME="tex2html2391"
-  HREF="node81.html#SECTION061100100000000000000">Store your app in Git</A>
+  HREF="node81.html#SECTION06110090000000000000">Procfile y Despliegue</A>
 <LI><A NAME="tex2html2392"
-  HREF="node81.html#SECTION061100110000000000000">Deploy your application to Heroku</A>
+  HREF="node81.html#SECTION061100100000000000000">Store your app in Git</A>
 <LI><A NAME="tex2html2393"
-  HREF="node81.html#SECTION061100120000000000000">Visit your application</A>
+  HREF="node81.html#SECTION061100110000000000000">Deploy your application to Heroku</A>
 <LI><A NAME="tex2html2394"
-  HREF="node81.html#SECTION061100130000000000000">Dyno sleeping and scaling</A>
+  HREF="node81.html#SECTION061100120000000000000">Visit your application</A>
 <LI><A NAME="tex2html2395"
-  HREF="node81.html#SECTION061100140000000000000">View the logs</A>
+  HREF="node81.html#SECTION061100130000000000000">Dyno sleeping and scaling</A>
 <LI><A NAME="tex2html2396"
-  HREF="node81.html#SECTION061100150000000000000">Console</A>
+  HREF="node81.html#SECTION061100140000000000000">View the logs</A>
 <LI><A NAME="tex2html2397"
-  HREF="node81.html#SECTION061100160000000000000">Rake</A>
+  HREF="node81.html#SECTION061100150000000000000"><FONT COLOR="#ff0000"> heroku run</FONT></A>
 <LI><A NAME="tex2html2398"
-  HREF="node81.html#SECTION061100170000000000000">Using a SQL database</A>
+  HREF="node81.html#SECTION061100160000000000000">Rake</A>
 <LI><A NAME="tex2html2399"
+  HREF="node81.html#SECTION061100170000000000000">Using a SQL database</A>
+<LI><A NAME="tex2html2400"
   HREF="node81.html#SECTION061100180000000000000">Webserver</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
@@ -849,7 +849,8 @@ $ heroku logs
 <P>
 
 <H4><A NAME="SECTION061100150000000000000">
-Console</A>
+
+<FONT COLOR="#ff0000"> heroku run</FONT></A>
 </H4>
   
 
@@ -949,19 +950,19 @@ On Cedar, they  recommend <code>Unicorn</code> as the webserver.
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2380"
+<A NAME="tex2html2381"
   HREF="node82.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2374"
+<A NAME="tex2html2375"
   HREF="node80.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2368"
+<A NAME="tex2html2369"
   HREF="node80.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2376"
+<A NAME="tex2html2377"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2378"
+<A NAME="tex2html2379"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -1013,11 +1014,11 @@ On Cedar, they  recommend <code>Unicorn</code> as the webserver.
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2381"
+<B> Sig:</B> <A NAME="tex2html2382"
   HREF="node82.html">Logging</A>
-<B>Sup:</B> <A NAME="tex2html2375"
+<B>Sup:</B> <A NAME="tex2html2376"
   HREF="node80.html">Heroku</A>
-<B> Ant:</B> <A NAME="tex2html2369"
+<B> Ant:</B> <A NAME="tex2html2370"
   HREF="node80.html">Heroku</A>
 </DIV>
 <!--End of Navigation Panel-->
