--- a/node83.html
+++ b/node83.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2433"
+<A NAME="tex2html2434"
   HREF="node84.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2427"
+<A NAME="tex2html2428"
   HREF="node80.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2421"
+<A NAME="tex2html2422"
   HREF="node82.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2429"
+<A NAME="tex2html2430"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2431"
+<A NAME="tex2html2432"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2434"
+<B> Sig:</B> <A NAME="tex2html2435"
   HREF="node84.html">Troubleshooting</A>
-<B>Sup:</B> <A NAME="tex2html2428"
+<B>Sup:</B> <A NAME="tex2html2429"
   HREF="node80.html">Heroku</A>
-<B> Ant:</B> <A NAME="tex2html2422"
+<B> Ant:</B> <A NAME="tex2html2423"
   HREF="node82.html">Logging</A>
 <B> Con:</B> 
-<A NAME="tex2html2429"
+<A NAME="tex2html2430"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html2431"
+<A NAME="tex2html2432"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -115,22 +115,24 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html2435"
-  HREF="node83.html#SECTION06130010000000000000">Provisioning the add-on</A>
 <LI><A NAME="tex2html2436"
-  HREF="node83.html#SECTION06130020000000000000">Create new db</A>
+  HREF="node83.html#SECTION06130010000000000000">Provisioning the add-on</A>
 <LI><A NAME="tex2html2437"
-  HREF="node83.html#SECTION06130030000000000000">Establish primary DB</A>
+  HREF="node83.html#SECTION06130020000000000000"><FONT COLOR="#ff0000"> heroku run</FONT></A>
 <LI><A NAME="tex2html2438"
-  HREF="node83.html#SECTION06130040000000000000">pg:info</A>
+  HREF="node83.html#SECTION06130030000000000000">Create new db</A>
 <LI><A NAME="tex2html2439"
-  HREF="node83.html#SECTION06130050000000000000">pg:psql</A>
+  HREF="node83.html#SECTION06130040000000000000">Establish primary DB</A>
 <LI><A NAME="tex2html2440"
-  HREF="node83.html#SECTION06130060000000000000">pg:reset</A>
+  HREF="node83.html#SECTION06130050000000000000">pg:info</A>
 <LI><A NAME="tex2html2441"
-  HREF="node83.html#SECTION06130070000000000000">pg:pull</A>
+  HREF="node83.html#SECTION06130060000000000000">pg:psql</A>
 <LI><A NAME="tex2html2442"
-  HREF="node83.html#SECTION06130080000000000000">pg:push</A>
+  HREF="node83.html#SECTION06130070000000000000">pg:reset</A>
+<LI><A NAME="tex2html2443"
+  HREF="node83.html#SECTION06130080000000000000">pg:pull</A>
+<LI><A NAME="tex2html2444"
+  HREF="node83.html#SECTION06130090000000000000">pg:push</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -209,6 +211,13 @@ heroku-postgresql:hobby-dev  HEROKU_POSTGRESQL_BROWN
 </PRE>
 
 <P>
+
+<H4><A NAME="SECTION06130020000000000000">
+
+<FONT COLOR="#ff0000"> heroku run</FONT></A>
+</H4>
+  
+
 <PRE>
 [~/srcPLgrado/pegjscalc(master)]$ heroku run irb
 Running `irb` attached to terminal... up, run.1081
@@ -218,7 +227,20 @@ irb(main):002:0&gt; ENV["DATABASE_URL"]
 =&gt; "postgres://moiwgreelvvujc:GL3shXGOpURyWOPrS2G8qaxzUe@ec2-23-21-101-129.compute-1.amazonaws.com:5432/dat9smslrg6g0a"
 irb(main):003:0&gt; ENV["HEROKU_POSTGRESQL_BROWN_URL"]
 =&gt; "postgres://moiwgreelvvujc:GL3shXGOpURyWOPrS2G8qaxzUe@ec2-23-21-101-129.compute-1.amazonaws.com:5432/dat9smslrg6g0a"
-irb(main):004:0&gt;
+irb(main):004:0&gt; 
+[~/srcPLgrado/pegjscalc(master)]$ heroku run console
+Running `console` attached to terminal... up, run.9013
+irb(main):002:0&gt; require './main'
+=&gt; true
+irb(main):003:0&gt; p = PL0Program.all
+=&gt; [#&lt;PL0Program @name="3p2m1" @source="                    3-2-1\r\n          "&gt;, #&lt;PL0Program @name="apbtc" @source="a+b*c"&gt;]
+irb(main):005:0&gt; chuchu = PL0Program.first(:name =&gt; "apbtc")
+=&gt; #&lt;PL0Program @name="apbtc" @source="a+b*c"&gt;
+irb(main):006:0&gt; chuchu.source
+=&gt; "a+b*c"
+irb(main):007:0&gt; prog = PL0Program.create(:name =&gt; "tata", :source =&gt; "3*a-c")
+=&gt; #&lt;PL0Program @name="tata" @source="3*a-c"&gt;
+irb(main):008:0&gt;
 </PRE>
 
 <P>
@@ -233,14 +255,14 @@ you can create a new database using the CLI.
 
 <P>
 
-<H4><A NAME="SECTION06130020000000000000">
+<H4><A NAME="SECTION06130030000000000000">
 Create new db</A>
 </H4>
   
 
 Heroku Postgres can be attached to a Heroku application via the 
 CLI<A NAME="tex2html306"
-  HREF="footnode.html#foot8621"><SUP><SPAN CLASS="arabic">13</SPAN>.<SPAN CLASS="arabic">3</SPAN></SUP></A>:
+  HREF="footnode.html#foot8622"><SUP><SPAN CLASS="arabic">13</SPAN>.<SPAN CLASS="arabic">3</SPAN></SUP></A>:
 <PRE>
 $ heroku addons:add heroku-postgresql:dev
 Adding heroku-postgresql:dev to sushi... done, v69 (free)
@@ -269,7 +291,7 @@ RACK_ENV:                    production
 
 <P>
 
-<H4><A NAME="SECTION06130030000000000000">
+<H4><A NAME="SECTION06130040000000000000">
 Establish primary DB</A>
 </H4>
   
@@ -305,7 +327,7 @@ which should match.
 
 <P>
 
-<H4><A NAME="SECTION06130040000000000000">
+<H4><A NAME="SECTION06130050000000000000">
 pg:info</A>
 </H4>
   
@@ -344,7 +366,7 @@ To continuously monitor the status of your database, pass pg:info through the un
 
 <P>
 
-<H4><A NAME="SECTION06130050000000000000">
+<H4><A NAME="SECTION06130060000000000000">
 pg:psql</A>
 </H4>
   
@@ -401,7 +423,7 @@ Connecting to HEROKU_POSTGRESQL_GRAY... done
 
 <P>
 
-<H4><A NAME="SECTION06130060000000000000">
+<H4><A NAME="SECTION06130070000000000000">
 pg:reset</A>
 </H4>
   
@@ -427,7 +449,7 @@ Restarting dynos... done
 
 <P>
 
-<H4><A NAME="SECTION06130070000000000000">
+<H4><A NAME="SECTION06130080000000000000">
 pg:pull</A>
 </H4>
   
@@ -455,7 +477,7 @@ database before proceeding.
 
 <P>
 
-<H4><A NAME="SECTION06130080000000000000">
+<H4><A NAME="SECTION06130090000000000000">
 pg:push</A>
 </H4>
   
@@ -477,19 +499,19 @@ that is not empty.
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2433"
+<A NAME="tex2html2434"
   HREF="node84.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2427"
+<A NAME="tex2html2428"
   HREF="node80.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2421"
+<A NAME="tex2html2422"
   HREF="node82.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2429"
+<A NAME="tex2html2430"
   HREF="node105.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2431"
+<A NAME="tex2html2432"
   HREF="node108.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -541,11 +563,11 @@ that is not empty.
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2434"
+<B> Sig:</B> <A NAME="tex2html2435"
   HREF="node84.html">Troubleshooting</A>
-<B>Sup:</B> <A NAME="tex2html2428"
+<B>Sup:</B> <A NAME="tex2html2429"
   HREF="node80.html">Heroku</A>
-<B> Ant:</B> <A NAME="tex2html2422"
+<B> Ant:</B> <A NAME="tex2html2423"
   HREF="node82.html">Logging</A>
 </DIV>
 <!--End of Navigation Panel-->
